# codespeak

./: README.md  pyproject.toml
codespeak/: __init__.py  _clean.py  _decorate.py  clean.py  config.py  constants.py  decorate.py  execute.py  executor.py  frame.py  frame_tests.py  generate.py  generated_exception.py  module_frame.py  test_function.py  unsafe_execute.py
codespeak/_cli/: main.py
codespeak/_core/: code_generator.py  codespeak_service.py  diff.py  executor.py  openai_service.py  prompt.py  results_collector.py
codespeak/_declaration/: body_imports.py  codespeak_declaration.py  declaration_file_service.py  declaration_helpers.py  declaration_resources.py
codespeak/_definitions/: classify.py  definition.py
codespeak/_helpers/: auto_detect_abspath_to_project_root.py  gather_arguments.py  get_attr_from_qualname.py  self_type.py
codespeak/_metadata/: __init__.py  digest.py
codespeak/_settings/: _settings.py
codespeak/apis/: api_keys.py  api_metadata.py
codespeak/cli/: main.py
codespeak/config/: _config.py  codespeak_config.py
codespeak/core/: code_generator.py  codespeak_service.py  diff.py  executor.py  openai_service.py  prompt.py  results_collector.py
codespeak/declaration/: body_imports.py  codespeak_declaration.py  declaration_file_service.py  declaration_helpers.py
codespeak/decorate/: infer.py  writable.py  writable_transform.py
codespeak/definitions/: __init__.py  classify.py  definition.py
codespeak/function/: __init__.py  function.py  function_attributes.py  function_declaration.py  function_declaration_lite.py  (+8 more)
(+99 files in other folders)
