[tool.poetry]
name = "codespeak"
version = "0.1.5"
description = ""
authors = ["nateshirley <nate.00.shirley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"
astor = "^0.8.1"
sqlalchemy = "^2.0.13"
pytest = "^7.3.1"
libcst = "^1.0.1"
furl = "^2.1.3"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
